# claude-stream-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: event.rs  lib.rs  parser.rs
tests/: test_parser.rs
