[package]
name = "claude-stream"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["MukundaKatta"]
description = "Parse Anthropic's Server-Sent Events stream into typed events. No SDK dependency — feed it bytes, get back message_start, content_block_delta, etc."
license = "MIT"
repository = "https://github.com/MukundaKatta/claude-stream-rs"
homepage = "https://github.com/MukundaKatta/claude-stream-rs"
documentation = "https://docs.rs/claude-stream"
readme = "README.md"
keywords = ["anthropic", "claude", "sse", "streaming", "parser"]
categories = ["parser-implementations", "api-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
